[package]
name = "microbitv2"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
microbit-v2 = "0.13.0"
#panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
#heapless = "0.7.16"